--- a/index.html
+++ b/index.html
@@ -29,48 +29,22 @@
           <li class="list-group-item">Dapibus ac facilisis in</li>
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
-
-            <div class="card row" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Kyle</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the
-                  bulk of the card's content.
-                </p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 89</li>
-                <li class="list-group-item">Phone: 732911</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-              </ul>
-              <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-              </div>
-            </div>
+      
           </div>
         </body>
       </html>
       
             <div class="card row" style="width: 18rem">
               <div class="card-body">
-                <h5 class="card-title">Fetty Wap </h5>
+                <h5 class="card-title">Steve</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up the
                   bulk of the card's content.
                 </p>
               </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 1738</li>
-                <li class="list-group-item">Phone: 911</li>
+                <li class="list-group-item">ID: 000</li>
+                <li class="list-group-item">Phone: undefined</li>
                 <li class="list-group-item">Vestibulum at eros</li>
               </ul>
               <div class="card-body">
